# hyperbehcs-hermes

./: .gitattributes  .gitignore  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ABILITY-SURFACE.md  AUTHORITY.md  INSTALL.md  LOCAL-PROOF-CROSSWALK.md  MCP-WEBMCP-WAVE.md  PUBLISH-THE-STUFF.md  PUBLISHING.md  QUICKSTART.md  SPINDLE-WAVE.md  STRICT-AUTHORITY.md  V0.2.1-HARDENING.md  V0.2.2-DESCRIPTOR-EXPANSION.md
examples/: authority_surface.hbi  authority_surface.hbp  authority_surface.hex  authority_surface.sha256  packet.hbi  packet.hbp  packet.hex  packet.sha256  promotion_approved.hbi  promotion_approved.hbp  promotion_approved.hex  promotion_approved.sha256  promotion_request.hbi  promotion_request.hbp  promotion_request.hex  promotion_request.sha256  promotion_revoked.hbi  promotion_revoked.hbp  promotion_revoked.hex  promotion_revoked.sha256  receipt.md  spindle_wave_mcp_webmcp.hex  spindle_wave_mcp_webmcp.sha256
hyperbehcs_hermes/: __init__.py  authority.py  chain.py  cli.py  gates.py  indexer.py  packet.py  promotion.py  verifier.py  wave.py  wave_templates.py
indices/: README.md
packets/: README.md
receipts/: README.md  github_publication_status_2026-05-21.hbi  github_publication_status_2026-05-21.hbp  github_publication_status_2026-05-21.hex  github_publication_status_2026-05-21.md  github_publication_status_2026-05-21.sha256  repo_bootstrap.hbi  repo_bootstrap.hbp  repo_bootstrap.hex  repo_bootstrap.sha256
tests/: test_authority_surface.py  test_chain.py  test_gates.py  test_packet.py  test_promotion.py  test_wave.py
(+48 files in other folders)
