[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperbehcs-hermes"
version = "0.1.0"
description = "Packet-first HyperBEHCS Hermes control-plane kernel"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Asolaria HyperBEHCS Operators" }]

[project.scripts]
hyperbehcs-hermes = "hyperbehcs_hermes.cli:main"
