[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hyperbehcs-hermes"
version = "0.2.2"
description = "Packet-first HyperBEHCS Hermes control-plane kernel with public authority descriptor packs"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Asolaria HyperBEHCS Operators" }]

[project.scripts]
hyperbehcs-hermes = "hyperbehcs_hermes.cli:main"

[tool.setuptools]
packages = ["hyperbehcs_hermes"]
